Update to retrieve first comment and attachment